--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ email:       cweachock@gmail.com
 author:      Chris Weachock
 description: "Home to a collection of my writings, artwork, Shopify stuff, and regenerative agriculture. Previously design and web for @mcuban, Rider for Bike and Build #BBSUS17."
 baseurl:     "chrisweachock.com"
-url:         "https://www.cweachock.github.io"
+url:         "cweachock.github.io"
 date_format: "%b %-d, %Y"
 header_pages:
  - about.md
