--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,8 @@ title:       Chris Weachock
 email:       cweachock@gmail.com
 author:      Chris Weachock
 description: "Home to a collection of my writings, artwork, Shopify stuff, and regenerative agriculture. Previously design and web for @mcuban, Rider for Bike and Build #BBSUS17."
-baseurl:     "chrisweachock.com"
-url:         "cweachock.github.io"
+baseurl:     
+url:         
 date_format: "%b %-d, %Y"
 header_pages:
  - about.md
