config title update

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title:       👋 Shopify, plants, and art stuff. 
+title:       👋 Hi, I'm Chris ☮ 🚲 🌱 🤓 💻 🌈
 email:       cweachock@gmail.com
 author:      Chris Weachock
 description: "Home to a collection of my writings, artwork, Shopify stuff, and regenerative agriculture. Previously design and web for @mcuban, Rider for Bike and Build #BBSUS17."
