--- a/_config.yml
+++ b/_config.yml
@@ -128,6 +128,7 @@ sass:
 plugins:
   - jekyll-paginate
   - jekyll-sitemap
+  - jekyll-gist
 # https://github.com/jekyll/jekyll/issues/2938
 exclude:
   - Gemfile
