--- a/_config.yml
+++ b/_config.yml
@@ -121,7 +121,7 @@ text:
 markdown:     kramdown
 redcarpet:
   extensions: ['smart', 'tables', 'with_toc_data']
-permalink:    pretty
+permalink:    /:year/:title
 paginate:     4
 sass:
   style: compressed
