--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ url:
 date_format: "%b %-d, %Y"
 header_pages:
  - about.md
- - work.md
+ - shopify.md
  - sketchbook.md
  - paintings.md
  - writing.md
