--- a/_config.yml
+++ b/_config.yml
@@ -8,10 +8,8 @@ url:
 date_format: "%b %-d, %Y"
 header_pages:
  - about.md
- - shopify.md
  - sketchbook.md
- - paintings.md
- - writing.md
+ - shopify.html
 
 # Google services
 google_verification:
