--- a/_config.yml
+++ b/_config.yml
@@ -8,8 +8,8 @@ url:
 date_format: "%b %-d, %Y"
 header_pages:
  - about.md
+ - shopify.html
  - sketchbook.md
- - shopify.md
 
 # Google services
 google_verification:
